<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imv1a1"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/imv1a1"
        app:srcCompat="@drawable/ssdt"
        app:layout_constraintBottom_toTopOf="@id/txt1a1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt1a1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/txt1a1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn1a1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn1a1"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:background="@drawable/btn_rec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt1a1"

        />

    <Button
        android:id="@+id/btn1a2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn1a2"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:background="@drawable/btn_rec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn1a1"
        />

    <Button
        android:id="@+id/btn1a3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn1a3"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_rec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn1a2"
        />



</androidx.constraintlayout.widget.ConstraintLayout>