<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view1"
    android:baselineAligned="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="@color/black"
    android:orientation="horizontal"
    android:weightSum="20">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_weight="2">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

             />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="9">
        <TextView
            android:id="@+id/txt3a1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt3a1"
            style="@style/txt_sum"/>

        <TextView
            android:id="@+id/txt3a2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt3a2"
            style="@style/txt_sum"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="9">
        <TextView
            android:id="@+id/txt3a3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt3a3"
            style="@style/txt_sum"/>

        <TextView
            android:id="@+id/txt3a4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt3a4"
            style="@style/txt_sum"/>
    </LinearLayout>
</LinearLayout>